DetailItem: update layout
* Use horizontal layout
* Fix IconControl

--- a/Maui/SimpleWeather.Maui/Controls/BeaufortControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/BeaufortControl.xaml
@@ -18,12 +18,9 @@
             x:Name="BeaufortIcon"
             Grid.Row="1"
             Grid.Column="0"
-            WidthRequest="{OnIdiom Default=85, Phone=76}"
-            HeightRequest="{OnIdiom Default=72, Phone=65}"
-            IconWidth="{OnIdiom Default=85, Phone=76}"
-            IconHeight="{OnIdiom Default=72, Phone=65}"
-            Margin="12,0"
-            MinimumHeightRequest="85"
+            IconWidth="55"
+            IconHeight="55"
+            Margin="20,10"
             VerticalOptions="Center"
             ForceBitmapIcon="True"
             IconColor="{AppThemeBinding Light=Purple, Dark=DodgerBlue}"
