WeatherNow: use cards for all panels
* Minor UI updates

--- a/Maui/SimpleWeather.Maui/Controls/BeaufortControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/BeaufortControl.xaml
@@ -22,7 +22,7 @@
             IconHeight="55"
             Margin="20,10"
             VerticalOptions="Center"
-            ForceBitmapIcon="True"
+            ShowAsMonochrome="True"
             IconColor="{AppThemeBinding Light=Purple, Dark=DodgerBlue}"
             WeatherIcon="{Binding Beaufort.Icon}" />
         <Label
